# HwGauge

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Database.md  GPUCollector copy.hpp  LICENSE  README.md
HwGauge/: CMakeLists.txt  main.cpp
HwGauge/Collector/: Collector.hpp  Config.hpp  CsvLogger.hpp  DBConfig.hpp  Database.hpp  DeviceCollector.hpp  Exception.hpp
HwGauge/Collector/Base/: CsvLogger.hpp  Database.hpp  DeviceCollector.hpp  HttpApi.hpp  Prometheus.hpp
HwGauge/Collector/CPUCollector/: CPUCollector.hpp  CPUCsvLogger.cpp  CPUCsvLogger.hpp  CPUDatabase.cpp  CPUDatabase.hpp  CPUMetrics.hpp  CPUPrometheus.cpp  CPUPrometheus.hpp  PCM.cpp  PCM.hpp
HwGauge/Collector/ClusterCollector/: ClusterCollector.hpp  ClusterImpl.cpp  ClusterImpl.hpp  ClusterMetrics.hpp
HwGauge/Collector/Common/: Config.hpp  Context.hpp
HwGauge/Collector/GPUCollector/: GPUCollector.hpp  GPUCsvLogger.cpp  GPUCsvLogger.hpp  GPUDatabase.cpp  GPUDatabase.hpp  GPUMetrics.hpp  GPUPrometheus.cpp  GPUPrometheus.hpp  NVML.cpp  NVML.hpp
HwGauge/Collector/NPUCollector/: NPUCollector.hpp  NPUCsvLogger.cpp  NPUCsvLogger.hpp  NPUDatabase.cpp  NPUDatabase.hpp  NPUDatabase.md  NPUImpl.cpp  NPUImpl.hpp  NPUMetrics.hpp  NPUPrometheus.cpp  NPUPrometheus.hpp
HwGauge/Collector/SYSCollector/: SYSCollector.hpp  SYSCsvLogger.cpp  SYSCsvLogger.hpp  SYSDatabase.cpp  SYSDatabase.hpp  SYSImpl.cpp  SYSImpl.hpp  SYSMetrics.hpp  SYSPrometheus.cpp  SYSPrometheus.hpp
HwGauge/Exposer/: Exposer.cpp  Exposer.hpp
cluster/: README.md  ansible.cfg  hosts_local.ini  hosts_wide.ini  run_sh.yml  run_sh_reboot.yml  set_env.yml  ssh.txt  start.yml  start_test.yml  stop.yml  stop_test.yml
cluster/ansible_error_logs/: error_node1.txt  error_node2.txt  error_node_clem_2.txt  error_node_clem_3.txt  error_node_clem_4.txt  error_node_clem_5.txt  error_node_utah_1.txt  error_node_utah_2.txt  error_node_utah_3.txt  error_node_utah_4.txt  error_node_utah_5.txt
sh/: README.md  add_known_host.sh  cuda_toolkit.sh  get_ip.sh  gpu_drive.sh  init_db.sh  init_redis.sh  scrape_data.sh  set_env.sh
